--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="converter">
-        <h1>Currency Converter</h1>
+        <h1>Currency Converter!</h1>
         <div>
             <label for="fromCurrency">From:</label>
             <select id="fromCurrency">
